# empires

./: .gitignore  CMakeLists.txt  README.md  grid.py  main.py  requirements.txt
docs/: Makefile  index.html  index.md
documentation/: diag.dot
grid/: grid.py  mathutils.py  structures.py
maps/: domain.py  mathutils.py
maps/europe/: specs.json
maps/greece/: specs.json
simulation/: civ.py  grid.py  gridv2.py  mathutils.py  parcel.py
src/: main.cpp  politics.cpp  politics.hpp
